[gd_scene load_steps=21 format=2]

[ext_resource path="res://textures/sand.png" type="Texture" id=1]
[ext_resource path="res://textures/floor-stone.png" type="Texture" id=2]
[ext_resource path="res://cell.gd" type="Script" id=3]
[ext_resource path="res://textures/wall.png" type="Texture" id=4]

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 10, 10 )

[sub_resource type="SpatialMaterial" id=3]
albedo_texture = ExtResource( 4 )
metallic_specular = 0.0

[sub_resource type="BoxShape" id=14]

[sub_resource type="PlaneMesh" id=4]
size = Vector2( 10, 10 )

[sub_resource type="SpatialMaterial" id=5]
albedo_texture = ExtResource( 4 )
metallic_specular = 0.0

[sub_resource type="PlaneMesh" id=6]
size = Vector2( 10, 10 )

[sub_resource type="SpatialMaterial" id=7]
albedo_texture = ExtResource( 4 )
metallic_specular = 0.0

[sub_resource type="PlaneMesh" id=9]
size = Vector2( 10, 10 )

[sub_resource type="SpatialMaterial" id=15]
albedo_texture = ExtResource( 2 )

[sub_resource type="PlaneMesh" id=16]

[sub_resource type="SpatialMaterial" id=17]
flags_transparent = true
albedo_color = Color( 0, 0, 0, 0.74902 )
metallic_specular = 0.0

[sub_resource type="PlaneMesh" id=10]
size = Vector2( 10, 10 )

[sub_resource type="SpatialMaterial" id=11]
albedo_texture = ExtResource( 2 )
metallic_specular = 0.0

[sub_resource type="BoxShape" id=18]

[sub_resource type="PlaneMesh" id=12]
size = Vector2( 10, 10 )

[sub_resource type="SpatialMaterial" id=13]
albedo_texture = ExtResource( 1 )
metallic_specular = 0.0

[node name="Cell" type="Spatial"]
script = ExtResource( 3 )

[node name="wall-s" type="MeshInstance" parent="."]
transform = Transform( -1, -3.89414e-07, 1.70218e-14, 0, -4.37114e-08, -1, 3.89414e-07, -1, 4.37114e-08, 0, 5, 5 )
mesh = SubResource( 1 )
material/0 = SubResource( 3 )

[node name="Area" type="Area" parent="wall-s"]

[node name="CollisionShape" type="CollisionShape" parent="wall-s/Area"]
transform = Transform( 5, 0, 0, 0, 0.2, 0, 0, 0, 5, 0, -0.2, 0 )
shape = SubResource( 14 )

[node name="wall-w" type="MeshInstance" parent="."]
transform = Transform( -1.62921e-07, 1, -4.37114e-08, 0, -4.37114e-08, -1, -1, -1.62921e-07, 7.12149e-15, -5, 5, 0 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="Area" type="Area" parent="wall-w"]

[node name="CollisionShape" type="CollisionShape" parent="wall-w/Area"]
transform = Transform( 5, 0, 0, 0, 0.2, 0, 0, 0, 5, 0, -0.2, 0 )
shape = SubResource( 14 )

[node name="wall-n" type="MeshInstance" parent="."]
transform = Transform( 1, 4.32443e-21, -1.89027e-28, 0, -4.37114e-08, -1, -4.32443e-21, 1, -4.37114e-08, 0, 5, -5 )
mesh = SubResource( 6 )
material/0 = SubResource( 7 )

[node name="Area" type="Area" parent="wall-n"]

[node name="CollisionShape" type="CollisionShape" parent="wall-n/Area"]
transform = Transform( 5, 0, 0, 0, 0.2, 0, 0, 0, 5, 0, -0.2, 0 )
shape = SubResource( 14 )

[node name="wall-e" type="MeshInstance" parent="."]
transform = Transform( -1.62921e-07, -1, 4.37114e-08, 0, -4.37114e-08, -1, 1, -1.62921e-07, 7.12149e-15, 5, 5, 0 )
mesh = SubResource( 9 )
material/0 = SubResource( 7 )

[node name="Area" type="Area" parent="wall-e"]

[node name="CollisionShape" type="CollisionShape" parent="wall-e/Area"]
transform = Transform( 5, 0, 0, 0, 0.2, 0, 0, 0, 5, 0, -0.2, 0 )
shape = SubResource( 14 )

[node name="pit" type="CSGBox" parent="."]
transform = Transform( 1, -1.09301e-43, -3.1129e-22, 0, 1, -3.51959e-22, 3.1129e-22, 3.51959e-22, 1, 0, -6, 0 )
visible = false
material_override = SubResource( 15 )
width = 10.0
height = 12.0
depth = 10.0

[node name="csg_subtract" type="CSGBox" parent="pit"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.26117e-44, 0.617493, -2.17333e-22 )
operation = 2
calculate_tangents = false
width = 9.0
height = 11.5
depth = 9.0

[node name="pit_bottom" type="MeshInstance" parent="pit"]
transform = Transform( 4.8, 0, 0, 3.64338e-44, 1, 0, 0, 0, 4.8, 2.94273e-44, -5.05004, 1.77741e-21 )
mesh = SubResource( 16 )
material/0 = SubResource( 17 )

[node name="darken_pit" type="MeshInstance" parent="pit"]
transform = Transform( 4.8, 0, 0, 4.2039e-44, 1, 0, 0, 0, 4.8, 3.22299e-44, 5.69125, -2.00308e-21 )
mesh = SubResource( 16 )
material/0 = SubResource( 17 )

[node name="floor" type="MeshInstance" parent="."]
cast_shadow = 0
mesh = SubResource( 10 )
material/0 = SubResource( 11 )

[node name="items_ne" type="Spatial" parent="floor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 0, -2.5 )

[node name="click_area" type="Area" parent="floor/items_ne"]
transform = Transform( 2.5, 0, 0, 0, 0.1, 0, 0, 0, 2.5, 0, -0.2, 0 )

[node name="box_shape" type="CollisionShape" parent="floor/items_ne/click_area"]
shape = SubResource( 18 )

[node name="items_se" type="Spatial" parent="floor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 0, 2.5 )

[node name="click_area" type="Area" parent="floor/items_se"]
transform = Transform( 2.5, 0, 0, 0, 0.1, 0, 0, 0, 2.5, 0, -0.2, 0 )

[node name="box_shape" type="CollisionShape" parent="floor/items_se/click_area"]
shape = SubResource( 18 )

[node name="items_sw" type="Spatial" parent="floor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 0, 2.5 )

[node name="click_area" type="Area" parent="floor/items_sw"]
transform = Transform( 2.5, 0, 0, 0, 0.1, 0, 0, 0, 2.5, 0, -0.2, 0 )

[node name="box_shape" type="CollisionShape" parent="floor/items_sw/click_area"]
shape = SubResource( 18 )

[node name="items_nw" type="Spatial" parent="floor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 0, -2.5 )

[node name="click_area" type="Area" parent="floor/items_nw"]
transform = Transform( 2.5, 0, 0, 0, 0.1, 0, 0, 0, 2.5, 0, -0.2, 0 )

[node name="box_shape" type="CollisionShape" parent="floor/items_nw/click_area"]
shape = SubResource( 18 )

[node name="ceil" type="MeshInstance" parent="."]
transform = Transform( -1, 3.25841e-07, 0, -3.25841e-07, -1, 0, 0, 0, 1, 0.0466738, 10.0066, -0.011107 )
cast_shadow = 0
mesh = SubResource( 12 )
material/0 = SubResource( 13 )
